log/build_2024-04-20_19-46-12/robot_2024/stderr.log
  File "/home/yamashita/robot_2024/install/robot_2024/lib/python3.10/site-packages/robot_2024/ya_slam.py", line 22
    def ()
        ^
SyntaxError: invalid syntax

